fixed the overlap due to font size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1116,6 +1116,13 @@ ul.socials {
     }
   }
 }
+/*Media query for font size of word carousel on mobile*/
+@media only screen and (max-width:598px){
+  .wordCarousel{
+    font-size: 24px;
+    text-align: center;
+  }
+}
 
 .flip2 {
   animation: flip2 6s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
